# my-webapp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  pyproject.toml
src/: app.py
src/pages/: __init__.py  home.py  tokenizers.py
